--- a/style2.css
+++ b/style2.css
@@ -1,16 +1,17 @@
 body {
-    background-color: #5D50DE; /* 设置背景颜色为#7E72E9 */
-    color: rgb(255, 255, 255); /* 设置文字颜色为白色 */
+    background-color:  rgb(236, 234, 234); /* 设置背景颜色为#7E72E9 */
+    color: rgb(0, 0, 0); /* 设置文字颜色为白色 */
     margin: 0; /* 移除默认的页面边距 */
     padding: 0; /* 移除默认的内边距 */
 }
 
+
 .header {
-    background-color: #544c9c; /* 设置背景颜色为#7E72E9 */
-    padding: 10px; /* 添加一些内边距，以使内容更加美观 */
-    display: flex; /* 使用弹性布局 */
-    align-items: center; /* 垂直居中对齐 */
-    width: 100%; /* 100%宽度 */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(214, 214, 214);
+    padding: 10px;
 }
 
 .header img {
@@ -20,103 +21,280 @@ body {
 }
 
 .header h1 {
-    font-family: 'Bradley Hand', sans-serif;
+    font-family: 'Mooli-Regular', sans-serif;
     margin: 0; /* 移除标题的默认外边距 */
 }
 
 .header a {
     text-decoration: none; /* 去掉下划线 */
-    color: white; /* 设置链接文本颜色为白色 */
+    color: rgb(0, 0, 0); /* 设置链接文本颜色为白色 */
+  }
+
+  /* 菜单按钮样式 */
+  /* 菜单按钮样式 */
+#menu-button {
+    position: absolute;
+    top: 25px;
+    right: 10px; /* 将left改为right */
+    cursor: pointer;
+    z-index: 1;
+    background-color: rgb(214, 214, 214);
+    color: #000000;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-family: 'Mooli-Regular', sans-serif;
+    font-size: 2.4rem;
+    text-align: center; /* 文本居中对齐 */
   }
   
+  /* 隐藏菜单项 */
+  #menu {
+    position: absolute;
+    top: 45 px;
+    right: 10px; /* 将left改为right */
+    z-index: 1;
+    display: none;
+
+  }
+  
+  
+
+  /* 菜单项样式 */
+  #menu ul {
+    list-style: none;
+    padding: 0;
+    font-family: 'Mooli-Regular', sans-serif;
+    font-size: 1.3rem;
+    
+  }
+
+  #menu ul li {
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    margin: 5px 0;
+    border-radius: 5px;
+  }
+  #menu ul li a {
+    color: inherit; /* 使用继承的颜色，显示原本的颜色 */
+    text-decoration: none; /* 去掉链接的下划线 */
+}
+  
+
+  /* 鼠标悬停时显示菜单项 */
+  #menu-button:hover + #menu {
+    display: block;
+  }
+
+  /* 鼠标悬停在菜单项上时继续显示 */
+  #menu:hover {
+    display: block;
+  }
+  
+
+.header2 {
+    color: #333; /* 设置文本颜色，以使其在头图上可见 */
+}
+
 
 h1 {
     font-family: 'Mooli-Regular', sans-serif;
     font-size: 3.2rem;
-    text-align: left; /* 文本居中对齐 */
-    margin-left: 20%;
+    margin-top: 25vh; /* 将h1置于页面顶部的三分之一处 */
+    text-align: left; /* 文本左对齐 */
+    margin-left: 25vw; /* 设置左边距以将文本移到左边四分之一处 */
 }
 
 h2 {
-    font-family: 'Rockwell', sans-serif;
-    font-size: 2.4rem;
-    margin-left: 10%;
-    text-shadow: 1px 1px #4b3f72;
+    font-family: 'Mooli-Regular', sans-serif;
+    font-size: 3.2rem;
+    margin-top: 10vh; /* 将h1置于页面顶部的三分之一处 */
+    text-align: left; /* 文本左对齐 */
+    margin-left: 3vw; /* 设置左边距以将文本移到左边四分之一处 */
 }
 
-h3 {
-    font-family: 'Rockwell', sans-serif;
-    font-size: 1.8rem;
-    text-shadow: 1px 1px #4b3f72;
+h2 a{
+color: inherit; /* 使用继承的颜色，显示原本的颜色 */
+    text-decoration: none; /* 去掉链接的下划线 */
+}
+
+h2::before, h2::after {
+    content: "";
+    display: block;
+    width: 480px;
+    height: 5px;
+    background-color: #333; /* 横线的颜色 */
+    margin-top: 10px;
+}
+
+h4 {
+    font-family: 'Caprasimo', sans-serif;
+    font-size: 3.2rem;
+    text-align: left; /* 文本左对齐 */
+    margin-left: 22vw; /* 设置左边距以将文本移到左边四分之一处 */
 }
 
 p {
-    font-family: 'Marker Felt', sans-serif;
-    font-size: 1.6rem;
-    text-shadow: 1px 1px #4b3f72;
-    font-weight: 400;
+    font-family: 'Caprasimo', sans-serif;
+    font-size: 1rem;
 }
 
 
 
 
-form {
-    font-family: 'Rockwell', sans-serif;
-    font-size: 1.6rem;
-    margin-top: 10vh; /* 将form置于页面顶部的三分之二处 */
-    text-align: center; /* 文本居中对齐 */
+.highlight {
+    background-color: rgb(154, 147, 105); /* 设置高亮背景颜色 */
+    font-weight: bold; /* 设置文本粗体以增强可读性 */
 }
 
-footer {
-    background-color: #333; /* 页脚背景颜色 */
-    color: #fff; /* 文字颜色 */
-    padding: 10px 0; /* 上下内边距 */
-    justify-content: space-between; /* 左右分布 */
-    bottom: 0; /* 位于底部 */
-    width: 100%; /* 100%宽度 */
+.new-works {
+    text-align: center;
+    background-color: #f5f5f5;
+    padding: 20px 0;
+}
+
+.new-works h3 {
+    font-family: 'Caprasimo', sans-serif;
+    font-size: 2rem;
+}
+
+.new-works-images {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
+    padding: 20px;
 }
 
-.footer-left {
-    order: 1; /* 调整左侧链接的显示顺序 */
-  }
-  
-  .footer-right {
-    order: 2; /* 调整右侧链接的显示顺序 */
-  }
+.new-works-image {
+    flex: 0 1 calc(33.33% - 20px);
+    position: relative;
+}
 
-.footer-left a,
-.footer-right a {
-    color: #fff; /* 链接文字颜色 */
-    text-decoration: none; /* 去掉下划线 */
+.new-works-image img {
+    max-width: 100%;
+    height: auto;
+}
+
+.new-works-description {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 5px 0;
+}
+
+.new-works-description p {
+    color: white;
+    text-align: center;
+    font-size: 1.2rem;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 2fr 4fr; /* 调整列的比例 */
-    column-gap: 20px; /* 可以根据需要调整列之间的间距 */
+            text-align: center;
+        }
+        
+        .category {
+            display: inline-block;
+            width: 48%;
+            margin: 1%;
+            position: relative;
+            float: left;
+        }
+        
+        .category img {
+            width: 650px; /* 设置图片的宽度 */
+            height: 300px; /* 设置图片的高度 */
+        }
+        
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+        
+        .overlay p {
+            color: white;
+            font-size: 18px;
+        }
+        
+        .category:hover .overlay {
+            opacity: 1;
+        }
+
+        form {
+            font-family: 'Rockwell', sans-serif;
+            font-size: 1.6rem;
+            margin-top: 10vh; /* 将form置于页面顶部的三分之二处 */
+            text-align: center; /* 文本居中对齐 */
+        }
+        
+        footer {
+            background-color: rgb(214, 214, 214);
+            color: white;
+            padding: 10px;
+            
+            bottom: 0; /* 位于底部 */
+            width: 100%; /* 100%宽度 */
+        }
+        
+        
+        
+        footer p {
+            margin: 0;
+        }
+        
+
+
+
+/* 样式用于标题 */
+.title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 5px;
+    font-family: 'Caprasimo', sans-serif;
 }
 
-.image {
-    width: 300px; /* 设置图片宽度 */
-    grid-column: 1; /* 控制图片位于第一列 */
-    justify-self: right; /* 图片水平居中 */
+/* 样式用于图片容器 */
+.image-container2 {
+    padding: 80px;
+    display: flex;
+    justify-content: space-between; /* 平均分布图片 */
 }
 
-h2 {
-    grid-column: 2; /* 控制标题位于第二列 */
+/* 样式用于图片 */
+.image2 {
+    margin: 10px; /* 添加间距，根据需要调整间距大小 */
+    flex: 1; /* 让每个图片容器占据相同的空间 */
+    text-align: center; /* 文本居中对齐 */
+    display: flex;
+    flex-direction: column; /* 设置为垂直布局 */
+    font-family: 'Caprasimo', sans-serif;
 }
 
-p {
-    grid-column: 2; 
+.image2 img {
+    width: 100%; /* 图片宽度最大为容器宽度 */
+    height: 250px; /* 图片高度最大为容器高度 */
+    object-fit: cover; 
 }
 
-.features{
-    font-family: 'Rockwell', sans-serif;
-    font-size: 1.2rem;
-    width: 60%;
-    margin: 0 auto; /* 水平居中 */
-    text-align: left; /* 文本居中对齐 */
-    font-weight: 400;
-  }
+/* 样式用于图片标题 */
+.image-title {
+    background-color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+
